@@ -61,10 +61,10 @@ mpd_send_list_queue_meta(struct mpd_connection *connection);
  * @param connection the connection to MPD
  * @param start the start position of the range (including)
  * @param end the end position of the range (excluding); the special
- * value "(unsigned)-1" makes the end of the range open
+ * value "UINT_MAX" makes the end of the range open
  * @return true on success, false on error
  *
- * @since libmpdclient 2.8 added support for "(unsigned)-1"
+ * @since libmpdclient 2.8 added support for "UINT_MAX"
  */
 bool
 mpd_send_list_queue_range_meta(struct mpd_connection *connection,
@@ -131,7 +131,7 @@ mpd_send_queue_changes_meta(struct mpd_connection *connection,
  * @param connection the connection to MPD
  * @param start the start position of the range (including)
  * @param end the end position of the range (excluding); the special
- * value "(unsigned)-1" makes the end of the range open
+ * value "UINT_MAX" makes the end of the range open
  * @return true on success, false on error
  *
  * @since libmpdclient 2.12
@@ -161,7 +161,7 @@ mpd_send_queue_changes_brief(struct mpd_connection *connection,
  * @param connection the connection to MPD
  * @param start the start position of the range (including)
  * @param end the end position of the range (excluding); the special
- * value "(unsigned)-1" makes the end of the range open
+ * value "UINT_MAX" makes the end of the range open
  * @return true on success, false on error
  *
  * @since libmpdclient 2.12
@@ -272,10 +272,10 @@ mpd_run_delete(struct mpd_connection *connection, unsigned pos);
  * @param connection the connection to MPD
  * @param start the start position of the range (including)
  * @param end the end position of the range (excluding); the special
- * value "(unsigned)-1" makes the end of the range open
+ * value "UINT_MAX" makes the end of the range open
  * @return true on success, false on error
  *
- * @since libmpdclient 2.8 added support for "(unsigned)-1"
+ * @since libmpdclient 2.8 added support for "UINT_MAX"
  */
 bool
 mpd_send_delete_range(struct mpd_connection *connection,
@@ -287,10 +287,10 @@ mpd_send_delete_range(struct mpd_connection *connection,
  * @param connection the connection to MPD
  * @param start the start position of the range (including)
  * @param end the end position of the range (excluding); the special
- * value "(unsigned)-1" makes the end of the range open
+ * value "UINT_MAX" makes the end of the range open
  * @return true on success, false on error
  *
- * @since libmpdclient 2.8 added support for "(unsigned)-1"
+ * @since libmpdclient 2.8 added support for "UINT_MAX"
  */
 bool
 mpd_run_delete_range(struct mpd_connection *connection,
@@ -337,9 +337,9 @@ mpd_run_shuffle(struct mpd_connection *connection);
  * @param connection the connection to MPD
  * @param start the start position of the range (including)
  * @param end the end position of the range (excluding); the special
- * value "(unsigned)-1" makes the end of the range open
+ * value "UINT_MAX" makes the end of the range open
  *
- * @since libmpdclient 2.8 added support for "(unsigned)-1"
+ * @since libmpdclient 2.8 added support for "UINT_MAX"
  */
 bool
 mpd_send_shuffle_range(struct mpd_connection *connection, unsigned start, unsigned end);
@@ -350,9 +350,9 @@ mpd_send_shuffle_range(struct mpd_connection *connection, unsigned start, unsign
  * @param connection the connection to MPD
  * @param start the start position of the range (including)
  * @param end the end position of the range (excluding); the special
- * value "(unsigned)-1" makes the end of the range open
+ * value "UINT_MAX" makes the end of the range open
  *
- * @since libmpdclient 2.8 added support for "(unsigned)-1"
+ * @since libmpdclient 2.8 added support for "UINT_MAX"
  */
 bool
 mpd_run_shuffle_range(struct mpd_connection *connection,
@@ -420,11 +420,11 @@ mpd_run_move_id(struct mpd_connection *connection, unsigned from, unsigned to);
  * @param connection the connection to MPD
  * @param start the start position of the range (including)
  * @param end the end position of the range (excluding); the special
- * value "(unsigned)-1" makes the end of the range open
+ * value "UINT_MAX" makes the end of the range open
  * @param to the new position of the song range
  * @return true on success, false on error
  *
- * @since libmpdclient 2.8 added support for "(unsigned)-1"
+ * @since libmpdclient 2.8 added support for "UINT_MAX"
  */
 bool
 mpd_send_move_range(struct mpd_connection *connection,
@@ -436,11 +436,11 @@ mpd_send_move_range(struct mpd_connection *connection,
  * @param connection the connection to MPD
  * @param start the start position of the range (including)
  * @param end the end position of the range (excluding); the special
- * value "(unsigned)-1" makes the end of the range open
+ * value "UINT_MAX" makes the end of the range open
  * @param to the new position of the song range
  * @return true on success, false on error
  *
- * @since libmpdclient 2.8 added support for "(unsigned)-1"
+ * @since libmpdclient 2.8 added support for "UINT_MAX"
  */
 bool
 mpd_run_move_range(struct mpd_connection *connection,
@@ -595,10 +595,10 @@ mpd_run_prio(struct mpd_connection *connection, int priority,
  * @param priority a number between 0 and 255
  * @param start the start position of the range (including)
  * @param end the end position of the range (excluding); the special
- * value "(unsigned)-1" makes the end of the range open
+ * value "UINT_MAX" makes the end of the range open
  *
  * @since libmpdclient 2.6
- * @since libmpdclient 2.8 added support for "(unsigned)-1"
+ * @since libmpdclient 2.8 added support for "UINT_MAX"
  */
 bool
 mpd_send_prio_range(struct mpd_connection *connection, int priority,
@@ -611,10 +611,10 @@ mpd_send_prio_range(struct mpd_connection *connection, int priority,
  * @param priority a number between 0 and 255
  * @param start the start position of the range (including)
  * @param end the end position of the range (excluding); the special
- * value "(unsigned)-1" makes the end of the range open
+ * value "UINT_MAX" makes the end of the range open
  *
  * @since libmpdclient 2.6
- * @since libmpdclient 2.8 added support for "(unsigned)-1"
+ * @since libmpdclient 2.8 added support for "UINT_MAX"
  */
 bool
 mpd_run_prio_range(struct mpd_connection *connection, int priority,
