@@ -1,4 +1,5 @@
 libmpdclient 2.16 (not yet released)
+* use UINX_MAX instead of `(unsigned)-1` to avoid undefined behavior
 
 libmpdclient 2.15 (2018/09/02)
 * support MPD protocol 0.21
